--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@nehlis/vue-toggle-component",
+  "name": "vue-toggle-component",
   "version": "0.1.1",
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -40,14 +40,11 @@
     "last 2 versions",
     "not dead"
   ],
-  "publishConfig": {
-    "registry": "https://npm.pkg.github.com"
-  },
   "description": "## Project setup ``` yarn install ```",
   "main": "babel.config.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/nehlis/vue-toggle-component"
+    "url": "git+https://github.com/nehlis/vue-toggle-component.git"
   },
   "keywords": [
     "Vue.js",
