--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "dependencies": {
     "sass": "^1.32.11",
-    "sass-loader": "10.1.1",
+    "sass-loader": "^11.0.1",
     "vue": "^3.0.11"
   },
   "devDependencies": {
