--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "name": "vue-toggle-component",
   "version": "1.0.6",
-  "main" : "dist/vue-toggle-component.common.js",
-  "files": ["dist/*"],
+  "main": "dist/vue-toggle-component.common.js",
+  "files": [
+    "dist/*"
+  ],
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
@@ -12,7 +14,8 @@
   "dependencies": {
     "sass": "^1.32.11",
     "sass-loader": "^10.1.1",
-    "vue": "^3.0.11"
+    "vue": "^3.0.11",
+    "vue-sfc-rollup": "^4.0.5"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.5.12",
